--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "dateformat": "^1.0.12"
+    "bluebird": "^3.5.0",
+    "dateformat": "^1.0.12",
+    "nodeify": "^1.0.1"
   }
 }
